cmake_minimum_required (VERSION 2.8)
project (zwm)
INCLUDE(FindPkgConfig)
find_package(X11)
if(NOT X11_FOUND)
	message(FATAL_ERROR "Failed to find X11 which is required to build zwm")
endif(NOT X11_FOUND)
set(LIBS ${LIBS} ${X11_LIBRARIES} "-lzen -lXinerama -lXcomposite -lXrender -lXfixes -lXdamage -lm")
set(CMAKE_C_FLAGS "-g -Wall ")
add_executable(zwm zwm.h atoms.c client.c cursor.c events.c layouts.c user.c
	zwm.c keypress.c ewmh.c panel.c)
target_link_libraries(zwm ${LIBS})
